New Mult Agent API

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-GROQ_API_KEY="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"
+#GROQ_API_KEY="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"
+GROQ_API_KEY="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"
 OPENAI_API_KEY=""
